--- a/f1-student-insurance.html
+++ b/f1-student-insurance.html
@@ -23,6 +23,15 @@
     </style>
 </head>
 <body>
+<div style="background:#1a1a2e;padding:1rem 0;position:sticky;top:0;z-index:1000;">
+    <div style="max-width:1200px;margin:0 auto;padding:0 20px;display:flex;justify-content:space-between;align-items:center;">
+        <a href="/" style="color:#4fbdba;text-decoration:none;font-size:1.5rem;font-weight:bold;">DailySpark</a>
+        <nav>
+            <a href="/" style="color:white;text-decoration:none;margin-left:2rem;">Home</a>
+            <a href="/#articles" style="color:white;text-decoration:none;margin-left:2rem;">All Articles</a>
+        </nav>
+    </div>
+</div>
     <article>
         <h1>F-1 Student Health Insurance Horror: How I Got a $47,000 Bill My First Month in America</h1>
         <p><em>Last updated: January 2025</em></p>
