--- a/high-deductible-reality.html
+++ b/high-deductible-reality.html
@@ -21,6 +21,15 @@
     </style>
 </head>
 <body>
+<div style="background:#1a1a2e;padding:1rem 0;position:sticky;top:0;z-index:1000;">
+    <div style="max-width:1200px;margin:0 auto;padding:0 20px;display:flex;justify-content:space-between;align-items:center;">
+        <a href="/" style="color:#4fbdba;text-decoration:none;font-size:1.5rem;font-weight:bold;">DailySpark</a>
+        <nav>
+            <a href="/" style="color:white;text-decoration:none;margin-left:2rem;">Home</a>
+            <a href="/#articles" style="color:white;text-decoration:none;margin-left:2rem;">All Articles</a>
+        </nav>
+    </div>
+</div>
     <article>
         <h1>I Paid $7,500 Before Insurance Covered a Single Doctor Visit (The High-Deductible Nightmare Nobody Warns You About)</h1>
         <p><em>Last updated: January 2025</em></p>
