CRITICAL FIX: Affiliate links now open in NEW tab so we don't lose visitors!

--- a/34000-before-help.html
+++ b/34000-before-help.html
@@ -27,7 +27,7 @@
         <a href="/" style="color:#4fbdba;text-decoration:none;font-size:1.5rem;font-weight:bold;">💡 DailySpark</a>
         <nav>
             <a href="/" style="color:white;text-decoration:none;margin-left:2rem;">Home</a>
-            <a href="/#articles" style="color:white;text-decoration:none;margin-left:2rem;">All Articles</a>
+            <a href="/" style="color:white;text-decoration:none;margin-left:2rem;">All Articles</a>
         </nav>
     </div>
 </div>
@@ -127,8 +127,8 @@ Lower premium ($1,200/month) but $15,000 deductible. Still $29,400 before help.<
 <h3>Option 3: Health Sharing Ministries</h3>
 Not real insurance. Can deny claims for any reason. Too risky.</p>
 <h3>Option 4: Direct Primary Care</h3>
-This was interesting. Services like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a> offer unlimited primary care for a flat monthly fee, typically $75-200/month.</p>
-<p>I seriously considered combining <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a> with a true catastrophic plan. The math:
+This was interesting. Services like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> offer unlimited primary care for a flat monthly fee, typically $75-200/month.</p>
+<p>I seriously considered combining <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> with a true catastrophic plan. The math:
 <ul><li>MyPhysicianPlan: $150/month ($1,800/year)</li>
 <li>Catastrophic coverage: $800/month ($9,600/year)</li>
 <li>Total: $11,400/year vs $34,000</li>
@@ -164,7 +164,7 @@ This was interesting. Services like <a href="https://www.awin1.com/cread.php?awi
 </ul>
 <p>That's right. Going self-employed effectively cost me $54,000 in additional expenses.</p>
 <h2>The Alternative I Wish I'd Known About Sooner</h2>
-<p>If I had to do it again, I'd seriously consider alternatives like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a> from day one. </p>
+<p>If I had to do it again, I'd seriously consider alternatives like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> from day one. </p>
 <p>For routine care - which is 90% of our family's needs - direct primary care could have handled it for a fraction of the cost. No deductibles. No surprise bills. Just a flat monthly fee.</p>
 <p>Combined with a high-deductible plan for true emergencies, it might have made the math work. But I was too locked into the "must have traditional insurance" mindset.</p>
 <h2>The Aftermath</h2>
