--- a/calculate-your-cliff.html
+++ b/calculate-your-cliff.html
@@ -27,7 +27,7 @@
         <a href="/" style="color:#4fbdba;text-decoration:none;font-size:1.5rem;font-weight:bold;">DailySpark</a>
         <nav>
             <a href="/" style="color:white;text-decoration:none;margin-left:2rem;">Home</a>
-            <a href="/#articles" style="color:white;text-decoration:none;margin-left:2rem;">All Articles</a>
+            <a href="/" style="color:white;text-decoration:none;margin-left:2rem;">All Articles</a>
         </nav>
     </div>
 </div>
@@ -250,14 +250,14 @@ Also watch the BOTTOM cliff:
 <li>Decision: STOP WORKING</li>
 </ul>
 <h2>Alternative If You're Near the Cliff</h2>
-<p>When you're playing this close to the edge, consider alternatives without cliffs. <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a> doesn't care if you make $62,000 or $65,000 - same price either way.</p>
+<p>When you're playing this close to the edge, consider alternatives without cliffs. <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> doesn't care if you make $62,000 or $65,000 - same price either way.</p>
 <p>Why this matters:
 <ul><li>No income calculations</li>
 <li>No cliff to worry about</li>
 <li>No repayment risk</li>
 <li>Focus on growing your business, not limiting it</li>
 </ul>
-<p>For someone dancing around the $62,600 cliff, the peace of mind alone might be worth it. Check out <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a> if you're tired of the income gymnastics.</p>
+<p>For someone dancing around the $62,600 cliff, the peace of mind alone might be worth it. Check out <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> if you're tired of the income gymnastics.</p>
 <h2>Your Action Plan</h2>
 <h3>Today:</h3>
 <li>Calculate your projected 2026 MAGI using the worksheet above</li>
@@ -299,7 +299,7 @@ Also watch the BOTTOM cliff:
 <p>$62,600 for single. $84,600 for married. Not $62,601. Not $84,601.</p>
 <p>One dollar makes the difference between affordable healthcare and financial ruin.</p>
 <p>Know your number. Track your number. Stay under your number.</p>
-<p>Or consider <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a> and stop worrying about numbers altogether.</p>
+<p>Or consider <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> and stop worrying about numbers altogether.</p>
 <p>Your financial future depends on math, not hope. Now you have the math.</p>
 <p>Use it.</p>
 <p>---</p>
