--- a/florida-double-trap.html
+++ b/florida-double-trap.html
@@ -27,7 +27,7 @@
         <a href="/" style="color:#4fbdba;text-decoration:none;font-size:1.5rem;font-weight:bold;">DailySpark</a>
         <nav>
             <a href="/" style="color:white;text-decoration:none;margin-left:2rem;">Home</a>
-            <a href="/#articles" style="color:white;text-decoration:none;margin-left:2rem;">All Articles</a>
+            <a href="/" style="color:white;text-decoration:none;margin-left:2rem;">All Articles</a>
         </nav>
     </div>
 </div>
@@ -130,14 +130,14 @@ I know three couples who divorced on paper to qualify for subsidies. Still livin
 <p><strong>Option 1: Earn More (Seriously)</strong>
 If you're at $14,000, finding a way to earn just $1,650 more gets you into subsidy territory. That's $137/month. Deliver for DoorDash one weekend a month.</p>
 <p><strong>Option 2: Alternative Coverage</strong>
-Look into <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a>. It's not traditional insurance, but it's something. They offer direct primary care starting at $75/month with no income requirements. When you're making $14,000 a year, having ANY healthcare access beats none.</p>
+Look into <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a>. It's not traditional insurance, but it's something. They offer direct primary care starting at $75/month with no income requirements. When you're making $14,000 a year, having ANY healthcare access beats none.</p>
 <p><strong>Option 3: Community Health Centers</strong>
 Florida has Federally Qualified Health Centers (FQHCs) with sliding scale fees. Not insurance, but better than nothing.</p>
 <h3>For Those Near 400% FPL</h3>
 <p><strong>Option 1: Retirement Contributions</strong>
 Max out Solo 401(k), SEP IRA, and HSA contributions to reduce your MAGI. Every dollar contributed saves you from the cliff.</p>
 <p><strong>Option 2: Alternative Coverage</strong>
-Again, <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a> or similar direct primary care memberships don't have income limits. Same price whether you make $50k or $150k.</p>
+Again, <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> or similar direct primary care memberships don't have income limits. Same price whether you make $50k or $150k.</p>
 <p><strong>Option 3: Move</strong>
 I'm serious. If you work remotely, establish residency in an expansion state. The savings could be $10,000+ per year.</p>
 <h2>The Political Reality Nobody Wants to Discuss</h2>
@@ -150,7 +150,7 @@ I'm serious. If you work remotely, establish residency in an expansion state. Th
 <h3>If You're Under 100% FPL:</h3>
 <li>Calculate exactly how much you need to earn to hit $15,650</li>
 <li>Find consistent side income to get there</li>
-<li>Research <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a> or similar alternatives</li>
+<li>Research <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> or similar alternatives</li>
 <li>Locate your nearest FQHC for basic care</li></p>
 <h3>If You're Near 400% FPL:</h3>
 <li>Know your exact cliff number ($62,600 for single, $84,600 for couple)</li>
@@ -181,7 +181,7 @@ I'm serious. If you work remotely, establish residency in an expansion state. Th
 <h2>The Bottom Line</h2>
 <p>Florida's double trap isn't a bug - it's a feature. It's the deliberate result of political choices that prioritize ideology over residents' health.</p>
 <p>Maria shouldn't have to earn more just to qualify for help. Carlos shouldn't lose $11,000 in subsidies for earning one extra dollar. But this is Florida's reality.</p>
-<p>Until something changes - Medicaid expansion, permanent subsidy enhancement, or you finding alternatives like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a> - you have to play the game perfectly.</p>
+<p>Until something changes - Medicaid expansion, permanent subsidy enhancement, or you finding alternatives like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> - you have to play the game perfectly.</p>
 <p>Know your numbers. Know your traps. Know your options.</p>
 <p>Because in Florida, nobody else is looking out for your healthcare. You're truly on your own in the Sunshine State.</p>
 <p>---</p>
