--- a/gig-economy-health.html
+++ b/gig-economy-health.html
@@ -27,7 +27,7 @@
         <a href="/" style="color:#4fbdba;text-decoration:none;font-size:1.5rem;font-weight:bold;">DailySpark</a>
         <nav>
             <a href="/" style="color:white;text-decoration:none;margin-left:2rem;">Home</a>
-            <a href="/#articles" style="color:white;text-decoration:none;margin-left:2rem;">All Articles</a>
+            <a href="/" style="color:white;text-decoration:none;margin-left:2rem;">All Articles</a>
         </nav>
     </div>
 </div>
@@ -130,7 +130,7 @@ Average gig worker savings: $0</p>
 <h2>Real Solutions That Actually Work for Gig Workers</h2>
 <p>After three years of research and testing everything, here's what actually helps:</p>
 <h3>Solution #1: Direct Primary Care Membership</h3>
-<p><a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a> has been a game-changer for gig workers. Here's why:</p>
+<p><a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> has been a game-changer for gig workers. Here's why:</p>
 <p><strong>The Basics:</strong>
 <ul><li>$75-150/month (predictable cost)</li>
 <li>No deductibles or copays</li>
@@ -265,7 +265,7 @@ Real cost: $675/year or $56/month</p>
 <p>Look, I've been there. Checking your teeth in the mirror, wondering if that pain is serious. Googling symptoms at 2 AM. Driving through illness because bills don't stop.</p>
 <p>The system isn't built for us. Politicians don't care. Gig companies definitely don't care.</p>
 <p>But we have to care about ourselves.</p>
-<p><a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a> isn't perfect, but it's something. It's a doctor who actually answers. It's medication you can afford. It's not choosing between health and rent.</p>
+<p><a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> isn't perfect, but it's something. It's a doctor who actually answers. It's medication you can afford. It's not choosing between health and rent.</p>
 <p>For $75/month - less than a tank of gas - you get:
 <ul><li>Real healthcare access</li>
 <li>No deductibles to meet</li>
