--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div class="logo">💡 DailySpark</div>
             <nav>
                 <a href="/">Home</a>
-                <a href="#articles">Articles</a>
+                <a href="/">Articles</a>
                 <a href="#subsidy-cliff">Subsidy Cliff</a>
                 <a href="#alternatives">Alternatives</a>
             </nav>
@@ -259,7 +259,7 @@
     <div class="cta" id="alternatives">
         <h2>Looking for an Alternative to Traditional Insurance?</h2>
         <p style="max-width: 700px; margin: 1rem auto;">If you're tired of high deductibles, subsidy cliffs, and insurance that doesn't actually cover anything, you're not alone. Many self-employed people are switching to direct primary care.</p>
-        <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" class="cta-button">Learn About MyPhysicianPlan →</a>
+        <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" class="cta-button">Learn About MyPhysicianPlan →</a>
         <p style="margin-top: 1rem; color: #666;">Not insurance, but actual healthcare you can afford and use.</p>
     </div>
     
