--- a/january-reset.html
+++ b/january-reset.html
@@ -27,7 +27,7 @@
         <a href="/" style="color:#4fbdba;text-decoration:none;font-size:1.5rem;font-weight:bold;">DailySpark</a>
         <nav>
             <a href="/" style="color:white;text-decoration:none;margin-left:2rem;">Home</a>
-            <a href="/#articles" style="color:white;text-decoration:none;margin-left:2rem;">All Articles</a>
+            <a href="/" style="color:white;text-decoration:none;margin-left:2rem;">All Articles</a>
         </nav>
     </div>
 </div>
@@ -123,14 +123,14 @@ January 15: Pay full price: $18,000</p>
 <p><strong>Every other developed nation:</strong> Healthcare doesn't reset. If you need care in December, you get it. If you need care in January, you get it. Same price (usually free).</p>
 <p><strong>USA:</strong> Sorry, the calendar says you're poor again.</p>
 <h2>The Alternative That Makes Sense</h2>
-<p>This is where services like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a> shine. No deductible resets. Same price every month. December care costs the same as January care.</p>
-<p>With <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a>:
+<p>This is where services like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> shine. No deductible resets. Same price every month. December care costs the same as January care.</p>
+<p>With <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a>:
 <ul><li>Flat monthly rate year-round</li>
 <li>No rushing to squeeze in December care</li>
 <li>No avoiding care January-November</li>
 <li>Just consistent, affordable healthcare access</li>
 </ul>
-<p>I'm seriously considering switching to <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a> for primary care and keeping catastrophic insurance for emergencies only.</p>
+<p>I'm seriously considering switching to <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> for primary care and keeping catastrophic insurance for emergencies only.</p>
 <h2>The Scheduling Nightmare</h2>
 <h3>December 17th Call Log:</h3>
 <ul><li>Gastroenterologist: "Next available December slot is... next December"</li>
