--- a/preventive-care-lie.html
+++ b/preventive-care-lie.html
@@ -27,7 +27,7 @@
         <a href="/" style="color:#4fbdba;text-decoration:none;font-size:1.5rem;font-weight:bold;">DailySpark</a>
         <nav>
             <a href="/" style="color:white;text-decoration:none;margin-left:2rem;">Home</a>
-            <a href="/#articles" style="color:white;text-decoration:none;margin-left:2rem;">All Articles</a>
+            <a href="/" style="color:white;text-decoration:none;margin-left:2rem;">All Articles</a>
         </nav>
     </div>
 </div>
@@ -152,14 +152,14 @@
 <p><strong>Japan:</strong> Prevention is healthcare. No distinction.</p>
 <p><strong>USA:</strong> Only these 47 specific services under these 193 specific conditions on alternating Tuesdays if you haven't eaten gluten.</p>
 <h2>The Direct Primary Care Difference</h2>
-<p>This is where <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a> makes sense. </p>
-<p>With <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a>:
+<p>This is where <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> makes sense. </p>
+<p>With <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a>:
 <ul><li>Annual visits include whatever you need to discuss</li>
 <li>No surprise billing for asking questions</li>
 <li>Actual preventive care, not insurance-defined prevention</li>
 <li>One flat rate whether you mention symptoms or not</li>
 </ul>
-<p>Traditional insurance punishes you for being thorough about your health. <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com">MyPhysicianPlan</a> encourages it.</p>
+<p>Traditional insurance punishes you for being thorough about your health. <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> encourages it.</p>
 <h2>How to Game the "Free" Visit System</h2>
 <h3>The Two-Visit Strategy:</h3>
 <li>First visit: ONLY do free screening, say NOTHING about symptoms</li>
