Fix broken links, add privacy/terms pages, update article count

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         </div>
         
         <p style="text-align: center; margin: 2rem 0;">
-            <a href="/all-articles.html" style="color: #667eea; font-weight: bold; font-size: 1.2rem;">View All 52 Articles →</a>
+            <a href="/all-articles.html" style="color: #667eea; font-weight: bold; font-size: 1.2rem;">View All 60+ Articles →</a>
         </p>
         
         <!-- Featured Alternative Section -->
@@ -377,7 +377,7 @@
         <p>
             <a href="/privacy-policy.html">Privacy Policy</a> | 
             <a href="/terms-of-service.html">Terms of Service</a> | 
-            <a href="mailto:brice@dailyspark.com">Contact Us</a>
+            <a href="mailto:contact@jaxsod.com">Contact Us</a>
         </p>
         <p style="margin-top: 1rem; font-size: 0.9rem; opacity: 0.8;">
             DailySpark is operated by Jax Sod Inc., Jacksonville, Florida
