Fix broken footer links across all articles

--- a/age-60-triple-premium.html
+++ b/age-60-triple-premium.html
@@ -443,9 +443,9 @@ Thinking about retiring at 62? If you have $100,000 in savings generating $4,000
     <footer>
         <p>© 2025 DailySpark | Helping the self-employed navigate healthcare</p>
         <p>
-            <a href="/about.html">About</a> | 
-            <a href="/contact.html">Contact</a> | 
-            <a href="/privacy.html">Privacy</a>
+            <a href="/">Home</a> | 
+            <a href="mailto:contact@jaxsod.com">Contact</a> | 
+            <a href="/privacy-policy.html">Privacy</a>
         </p>
     </footer>
 </body>
