--- a/retirement-contributions-lower-magi.html
+++ b/retirement-contributions-lower-magi.html
@@ -308,8 +308,8 @@
             <nav class="nav-links">
                 <a href="/">Home</a>
                 <a href="/articles.html">Articles</a>
-                <a href="/about.html">About</a>
-                <a href="/contact.html">Contact</a>
+                <a href="/">Home</a>
+                <a href="mailto:contact@jaxsod.com">Contact</a>
             </nav>
         </div>
     </header>
@@ -1093,7 +1093,7 @@
                 <a href="/about.html">About Us</a>
                 <a href="/privacy.html">Privacy Policy</a>
                 <a href="/disclosure.html">Affiliate Disclosure</a>
-                <a href="/contact.html">Contact</a>
+                <a href="mailto:contact@jaxsod.com">Contact</a>
             </div>
             <p>© 2025 DailySpark | Empowering Self-Employed Americans with Better Healthcare Options</p>
             <p style="font-size: 0.9rem; margin-top: 1rem; opacity: 0.8;">
