--- a/appendectomy-lottery.html
+++ b/appendectomy-lottery.html
@@ -485,9 +485,9 @@ I pay $16,800/year in premiums and still had to pay $14,600 for emergency surger
     <footer>
         <p>© 2025 DailySpark | Helping the self-employed navigate healthcare</p>
         <p>
-            <a href="/about.html">About</a> | 
-            <a href="/contact.html">Contact</a> | 
-            <a href="/privacy.html">Privacy</a>
+            <a href="/">Home</a> | 
+            <a href="mailto:contact@jaxsod.com">Contact</a> | 
+            <a href="/privacy-policy.html">Privacy</a>
         </p>
     </footer>
 </body>
