--- a/broken-leg-7500.html
+++ b/broken-leg-7500.html
@@ -481,9 +481,9 @@ Honestly, <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516
     <footer>
         <p>© 2025 DailySpark | Helping the self-employed navigate healthcare</p>
         <p>
-            <a href="/about.html">About</a> | 
-            <a href="/contact.html">Contact</a> | 
-            <a href="/privacy.html">Privacy</a>
+            <a href="/">Home</a> | 
+            <a href="mailto:contact@jaxsod.com">Contact</a> | 
+            <a href="/privacy-policy.html">Privacy</a>
         </p>
     </footer>
 </body>
