--- a/cash-vs-insurance.html
+++ b/cash-vs-insurance.html
@@ -492,9 +492,9 @@ Keep high-deductible insurance for true emergencies where you can't negotiate.</
     <footer>
         <p>© 2025 DailySpark | Helping the self-employed navigate healthcare</p>
         <p>
-            <a href="/about.html">About</a> | 
-            <a href="/contact.html">Contact</a> | 
-            <a href="/privacy.html">Privacy</a>
+            <a href="/">Home</a> | 
+            <a href="mailto:contact@jaxsod.com">Contact</a> | 
+            <a href="/privacy-policy.html">Privacy</a>
         </p>
     </footer>
 </body>
