--- a/quarterly-tax-planning.html
+++ b/quarterly-tax-planning.html
@@ -537,9 +537,9 @@
     <footer>
         <p>© 2025 DailySpark | Helping the self-employed navigate healthcare</p>
         <p>
-            <a href="/about.html">About</a> | 
-            <a href="/contact.html">Contact</a> | 
-            <a href="/privacy.html">Privacy</a>
+            <a href="/">Home</a> | 
+            <a href="mailto:contact@jaxsod.com">Contact</a> | 
+            <a href="/privacy-policy.html">Privacy</a>
         </p>
     </footer>
 </body>
